// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisplayExternal display error on fetch fail 1`] = `
.emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  border: 1px solid #d1372e;
  color: #d1372e;
  padding: 1rem;
}

<div>
  <div
    class="emotion-0"
    contenteditable="false"
  >
    <div>
      <span>
        oEmbed av type  og kilde  er ikke støttet.
      </span>
    </div>
  </div>
</div>
`;

exports[`DisplayExternal renders external correctly 1`] = `
.emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  border: 1px solid #d1372e;
  color: #d1372e;
  padding: 1rem;
}

<div>
  <div
    class="emotion-0"
    contenteditable="false"
  >
    <div>
      <span>
        oEmbed av type external og kilde  er ikke støttet.
      </span>
    </div>
  </div>
</div>
`;

exports[`DisplayExternal renders iframe correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  position: absolute;
  right: 16px;
  top: 16px;
  z-index: 2;
  gap: 6px;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6px;
  color: #20588f;
  background: #ceddea;
  border: 2px solid #ceddea;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4px 6px;
  font-size: 14px;
  font-size: 0.7777777777777778rem;
  line-height: 18px;
  min-height: 32px;
  border-width: 1px;
  border-radius: 100%;
  padding: 6px;
  line-height: 1;
  border-color: transparent;
  min-height: unset;
}

.emotion-1:hover,
.emotion-1:focus-visible {
  color: #fff;
  background-color: #184673;
  border-color: #184673;
}

.emotion-1[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-1:where([lang='zh'], .emotion-1[lang='zh-Hans'], [lang='zh-Hant']):not([data-pinyin]) {
  font-size: calc(14px * 1.11);
  font-size: calc(0.7777777777777778rem * 1.11);
}

.emotion-1 svg {
  width: 24px;
  height: 24px;
  margin: 0;
}

.emotion-2 {
  display: inline-block;
  fill: currentColor;
  vertical-align: middle;
  line-height: 1em;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 16px;
  height: 16px;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6px;
  color: #fff;
  background: #d1372e;
  border: 2px solid #d1372e;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4px 6px;
  font-size: 14px;
  font-size: 0.7777777777777778rem;
  line-height: 18px;
  min-height: 32px;
  border-width: 1px;
  border-radius: 100%;
  padding: 6px;
  line-height: 1;
  border-color: transparent;
  min-height: unset;
}

.emotion-4:hover,
.emotion-4:focus-visible {
  color: #fff;
  background-color: #d1372e;
  border-color: #d1372e;
}

.emotion-4[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-4:where([lang='zh'], .emotion-4[lang='zh-Hans'], [lang='zh-Hant']):not([data-pinyin]) {
  font-size: calc(14px * 1.11);
  font-size: calc(0.7777777777777778rem * 1.11);
}

.emotion-4 svg {
  width: 24px;
  height: 24px;
  margin: 0;
}

.emotion-4:hover,
.emotion-4:focus,
.emotion-4:focus-within,
.emotion-4:focus-visible,
.emotion-4:active {
  background-color: #fff;
}

.emotion-4:hover svg,
.emotion-4:focus svg,
.emotion-4:focus-within svg,
.emotion-4:focus-visible svg,
.emotion-4:active svg {
  color: #d1372e;
}

.emotion-7[data-show-copy-outline='true'] {
  box-shadow: rgb(32, 88, 143) 0 0 0 2px;
}

.emotion-8 {
  position: absolute;
  bottom: 0px;
  right: 23px;
  cursor: pointer;
}

<div>
  <div
    class="c-figure"
    contenteditable="false"
  >
    <div
      class="emotion-0"
      data-white="true"
    >
      <button
        aria-label="Rediger eksternt element"
        class="emotion-1"
        title="Rediger eksternt element"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="emotion-2 emotion-3"
          data-icon=""
          data-license="Apache License 2.0"
          data-source="Material Design"
          fill="currentColor"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M3.9 12c0-1.7 1.4-3.1 3.1-3.1h4V7H7a5 5 0 0 0 0 10h4v-1.9H7A3.1 3.1 0 0 1 3.9 12M8 13h8v-2H8zm9-6h-4v1.9h4a3.1 3.1 0 0 1 0 6.2h-4V17h4a5 5 0 0 0 0-10"
          />
        </svg>
      </button>
      <button
        aria-label="Fjern eksternt element"
        class="emotion-4"
        data-testid="remove-element"
        title="Fjern eksternt element"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="emotion-2 emotion-3"
          data-icon=""
          data-license="Apache License 2.0"
          data-source="Material Design"
          fill="currentColor"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M6 19c0 1.1.9 2 2 2h8a2 2 0 0 0 2-2V7H6zm2.5-7.1 1.4-1.4 2.1 2 2.1-2 1.4 1.4-2 2.1 2 2.1-1.4 1.4-2.1-2-2.1 2-1.4-1.4 2-2.1zm7-7.9-1-1h-5l-1 1H5v2h14V4z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </button>
    </div>
    <div
      class="emotion-7"
      style="pointer-events: auto;"
    >
      <iframe
        allowfullscreen=""
        contenteditable="false"
        frameborder="0"
        height="392"
        scrolling="no"
        src="https://nb.khanacademy.org/embed_video?v=jHPr-CuvHhs"
        title="nb.khanacademy.org"
      />
      <div
        aria-label="Endre størrelse"
        class="emotion-8"
        role="button"
      >
        <svg
          aria-hidden="true"
          class="emotion-2 emotion-3"
          data-icon=""
          data-license="Apache License 2.0"
          data-source="Material Design"
          fill="currentColor"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M12 5.8 15.2 9l1.4-1.4L12 3 7.4 7.6 8.8 9zm0 12.4L8.8 15l-1.4 1.4L12 21l4.6-4.6-1.4-1.4z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
